--- a/assets/css/product_styles.css
+++ b/assets/css/product_styles.css
@@ -1547,7 +1547,7 @@ select option
 .product_price
 {
 	display: inline-block;
-	font-size: 24px;
+	font-size: 16px;
 	font-weight: 500;
     margin-left: 75px;
 }
@@ -1983,12 +1983,12 @@ select option
 .footer .logo
 {
 	top: auto;
-	-webkit-transform: transform: none;
+	/* -webkit-transform: transform: none;
     -moz-transform: transform: none;
     -ms-transform: transform: none;
     -o-transform: transform: none;
-    transform: none;
-}
+    transform: none;*/
+} 
 .footer .logo a
 {
 	color: #000000;
